--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -11,7 +11,7 @@
   });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/74864461" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+<!-- /Yandex.Metrika counter -->  
 
 {% load static %}
 {% load thumbnail %}
@@ -33,88 +33,45 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
   <title>005 PRINT</title>
- 
- <!--
- 
- <style>
-  	.card{
-  		    height: 300px;
-  	}
-  	.card-product:after {
-    content: "";
-    display: table;
-    clear: both;
-    visibility: visible; }
-  .card-product .price-new, .card-product .price {
-    margin-right: 5px; }
-  .card-product .price-old {
-    color: #999; }
-  .card-product .img-wrap {
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-    position: relative;
-    height: 220px;
-    text-align: center; }
-    <span class="border-0"></span>  
-    
-      
-      .card-product .info-wrap {
-    overflow: hidden;
-    padding: 15px;
-    border-top: 1px solid #eee; }
-  .card-product .action-wrap {
-    padding-top: 4px;
-    margin-top: 4px; }
-  .card-product .bottom-wrap {
-    padding: 15px;
-    border-top: 1px solid #eee; }
-  .card-product .title {
-    margin-top: 0; }
-  </style>
 
--->
-
-</head>
-<body>
-<br>
- 
+<center>
 
 
-<!-- <p style="color:rgb(36, 163, 60)" class="text-center"><a href="/"> <img src="/media/products/logo_rose.png" width="90" height="60"></a>                            <i class="fas fa-users"></i> дружественный полиграфический сервис: <a class="text-muted" class="fas fa-users"></i><i class="fas fa-headset"></i> поддержка, <i class="fas fa-eye"></i> визуализация, <i class="fas fa-calculator"></i> мгновенный расчёт, </i> доставка <i class="fas fa-truck"></i></i></p> -->
-
-  
-  <div class="container" >
- 
- <!--    <ul id="menu" style="display: flex;"> -->
-   
-<p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i> info@005.ru</a> 
-
-  <a href="/">
- 
-    <img src="/media/products/logo_rose.png" width="89" height="58">
-
-</a>  
-
- <!--
-
-<a href="#" class="tlg-button">
- 
- <img src="/media/banner/tlglogo.jpeg" width="70" height="45"> 
- 
-  <!-- <img src="/media/banner/tlogo.jpeg" width="45" height="45">-->
-
-</a> 
-
--->
-<!--<a href="https://t.me/print_005_bot"><i style="color:rgb(36, 163, 60)" class="fab fa-telegram"> </i></h6> </a> -->
-
-
-<!--<h3 style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"><a href="https://t.me/print_005_bot"><i class="fab fa-telegram"></i></a>   </h3</span>-->
-  <i class="fa fa-phone"></i>   +7 (495) 740-38-93   </h6>  
-
-
-
+<div class="container">
+  <div class="row">
+      <div class="col-md-4">
+        <a href="/"> <img src="/media/products/logo_rose.png" width="100" height="63"></a>
+        <h7>  {% trans 'комфортная поддержка' %} </h7>
+       
+      </div>
+      <div class="col-md-8">
+        <p>
+          <h7> <p style="color:rgb(0, 0, 0)" class="text-center" class="text-muted">  <i class=" fa fa-phone"></i>      +7(495) 740-38-93 </a><a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="  fa fa-envelope" aria-hidden="true"></i>  info@005.ru </a>
+        </p>
+       
+        <script>
+        CSS:
+        img {
+          vertical-align: middle;
+        }
+        
+        </script>
+      </div>
+  </div>
 </div>
+
+
+
+
+</center>
+
+
+    
+
+
+
+
+
 
     {% include 'products/navbar.html' %}
 
