--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -79,33 +79,65 @@
 
 </div>
 
+<br>
 
 
-
-
-
-
-
-<style>
-  .outer {
-
-  }
-  .inner {
-    width: 1200px;
-    margin: auto;
-  }
-</style>
 
 
 {% for ban in banner %}
-  <img src="{{ ban.mainimage.url }}" alt="images" width="100%">
+  <img src="{{ ban.mainimage.url }}" alt="images" width="100%"  height="50%">
 {% endfor %}
 
 
 
+<!--
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.row {
+  display: flex;
+}
+
+/* Create three equal columns that sits next to each other */
+.column {
+  flex: 20.0%;
+  padding: 5px;
+}
+</style>
+</head>
+<body>
 
 
-<br><br><br><br><br>
+<div class="row">
+  <div class="column">
+    <img src="/media/products/блокнот.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="/media/products/плакаты.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="/media/products/роллап3.png" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="/media/products/роллап3.png" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="/media/products/роллап3.png" alt="Snow" style="width:100%">
+  </div>
+</div>
+
+</body>
+</html>
+
+
+-->
+<br><br><br>
+
 <div class="container">
   <div class="row">
 
@@ -124,209 +156,194 @@
   </div>
 </div>
 
-<br><br>
-
-<!--
-<svg xmlns="http://www.w3.org/2000/svg" width="48" height="28" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
-  <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
-  <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
-</svg>
--->
 
 
-<div class="container">
-  <div class="row">
+<br><br><br>
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.center {
+  margin: auto;
+  width: 45%;
+  border: 1px solid #73AD21;
+  padding: 10px;
+}
+</style>
+</head>
+<body>
+
+
+<div class="center">
+  <p>
+    <div class="container">
+      <div class="row">
+        <div id="rectangle">
+     <a data-role="button" data-inline="true" href="support.html"> 
+          <div class="col-sm">
+            <h3 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-phone-volume"></i></h5></span>
     
- <a data-role="button" data-inline="true" href="support.html"> 
-      <div class="col-sm">
-        <h5 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-phone-volume"></i></h5></span>
-        <h5  style="color:rgb(36, 163, 60)" class="card-title"> {% trans 'поддержка' %}</h5></span>
-        <h7 class="card-title"><span class="text-muted">  {% trans 'консультации при' %}<br> <i class="fas fa-shopping-cart"></i> {% trans 'онлайн заказе' %}</h7></span>
-      </a>
+            <h7 class="card-title"><span class="text-muted">  {% trans 'консультации' %}</h7></span>
+          </a>
+          </div>
+        </div>
+    
+     
+      
+        <div id="rectangle">
+      <a data-role="button" data-inline="true" href="quality.html"> 
+          <div class="col-sm">
+            <h3 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-gem"></i></h5></span>
+    
+            <h7 class="card-title"><span class="text-muted">{% trans 'контроль качества' %} </h7></span> 
+          </a> 
+        </div>
       </div>
-  
-
-  <a data-role="button" data-inline="true" href="quality.html"> 
-      <div class="col-sm">
-        <h5 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-star"></i></h5></span>
-        <h5  style="color:rgb(36, 163, 60)"  class="card-title"> {% trans 'высокое качество' %}</h5></span>   
-        <h7 class="card-title"><span class="text-muted">{% trans 'контроль качества' %} </h7></span> 
-      </a> 
-    </div>
-
-
-   
-
- 
-   
-
-   <a data-role="button" data-inline="true" href="hmo.html"> 
-      <div class="col-sm">
-      <h5 style="color:rgb(0, 0, 0)" class="card-title"> <i class="fas fa-calculator"></i> 
-      <h5  style="color:rgb(36, 163, 60)" class="card-title"> {% trans 'мгновенный расчёт' %} </h5></span>   
-      <h7 class="card-title"><span class="text-muted">{% trans 'очень простой калькулятор расчёта  в 2 клика' %}  </h7></span>
-      </a>
-    </div>
-   
-  
-
-  <!--
-    <a data-role="button" data-inline="true" href="technologies.html"> 
-    <div class="col-sm">
-    <h5 style="color:rgb(0, 0, 0)" class="card-title"><span><i class="fas fa-fill-drip"></i></h5></span>
-    <h5  style="color:rgb(36, 163, 60)"  class="card-title">технологии </h5></span>
-    <h7 class="card-title"><span class="text-muted"> помощь,рекомендации </h7></span>
-    </a>
-    </div>
-
--->
     
-
-    <a data-role="button" data-inline="true" href="rest.html"> 
-      <div class="col-sm">
-        <h5 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-utensils"></i></h5></span>
-        <h5  style="color:rgb(36, 163, 60)" class="card-title">{% trans 'для ресторанов' %} </h5></span>
-        <h7 class="card-title"><span class="text-muted"> {% trans 'специальное предложение' %}</h7></span>
-      </a>
+    
+      <div id="rectangle">
+       <a data-role="button" data-inline="true" href="hmo.html"> 
+          <div class="col-sm">
+          <h3 style="color:rgb(0, 0, 0)" class="card-title"> <i class="fas fa-calculator"></i> </h5></span>
+     
+          <h7 class="card-title"><span class="text-muted">{% trans 'расчёт  в 2 клика' %}  </h7></span>
+          </a>
+        </div>
       </div>
 
-       <a data-role="button" data-inline="true" href="delivery.html"> 
+      <a data-role="button" data-inline="true" href="rest.html"> 
         <div class="col-sm">
-          <h5 style="color:rgb(0, 0, 0)" class="card-title"><i class="fa fa-truck" ></i></h5></span>
-          <h5  style="color:rgb(36, 163, 60)" class="card-title">{% trans 'доставка' %}  </h5></span>
-          <h7 class="card-title"><span class="text-muted"> {% trans 'доставка' %}  <br> <i class="fas fa-shopping-cart"></i></h7></span>
+          <h3 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-utensils"></i></h5></span>
+    
+          <h7 class="card-title"><span class="text-muted"> {% trans ' для ресторанов' %}</h7></span>
         </a>
         </div>
-
-
-
+<!--
+        <a data-role="button" data-inline="true" href="hmo.html"> 
+          <div class="col-sm">
+            <h3 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-cart-plus"></i></h5></span>
+      
+            <h7 class="card-title"><span class="text-muted"> {% trans ' как заказать' %}</h7></span>
+          </a>
+          </div>
+          -->
+       
+        </div>
+      </div>
     </div>
-  </div>
+    </p>
 </div>
 
-<!--
-<a data-role="button" data-inline="true" href="gmail.html">
-  Poczta Gmail
-  </a>
+</body>
+</html>
 
--->
+
+
   
+</div>
 
-          <br>
-          <br>
-          <br>
-        
-        
-    
+<br><br>
 
-<div class="blog">
-
- <div class="container">
-  <H2 class="text-center"  >{% trans 'Наши изделия ' %} </H2>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-  <br>
- 
- 
-
-
-
+<div class="container">
+  
 
  <br><br>
-  <div class="row">
-          
-          <br>
-          <br>
-          <br>
-          <br>
-
-       
-      
-    <!-- <div class="card"> -->
-     <!-- <div class="card-img">
-      <img align="center" src="images/posts/polit.jpg" class="img-fluid">
-     </div> -->
-
-	{% for product in filter.qs %}
-  
-  <!-- <div class="tile__body list-default__parent"> -->
- 
-	<div class="col-md-3 col-lg-3 col-sm-6">
-  
-
-	    <div class="card">
-	     <div class="card-img">
-
-        <a href="products_by_category/{{ product.id }}">
-      		{% thumbnail product.mainimage "300" as im %}
-		        <img align="center" src="{{ im.url }}"  class="img-fluid">
-      {% endthumbnail %}
-        </a>
-	     </div>
-
-
-
-       
-	    <div class="card-body">
-        <H7 STYLE="font-family: 'avenir next rounded std'"></H6>
-         <h5 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(36, 163, 60)">{{ product.name }} ></p></a></h4>
+ <div class="row">
          
-    
-  
- <h6 class="card-title"><span class="text-muted"> {{ product.preview_text}}</span></a></h6>
-         <p class="card-text">
-          
-	      
-	      </p>
-	     </div>
-     
-	    </div>
+         <br>
+         <br>
+         <br>
+         <br>
 
-      <br><br>
-  
-  </div>
-	   
-  
-  
+      
+     
+   <!-- <div class="card"> -->
+    <!-- <div class="card-img">
+     <img align="center" src="images/posts/polit.jpg" class="img-fluid">
+    </div> -->
+
+ {% for product in filter.qs %}
+ 
+ <!-- <div class="tile__body list-default__parent"> -->
+
+ <div class="col-md-3 col-lg-3 col-sm-6">
+ 
+
+     <div class="card">
+      <div class="card-img">
+
+       <a href="products_by_category/{{ product.id }}">
+         {% thumbnail product.mainimage "300" as im %}
+           <img align="center" src="{{ im.url }}"  class="img-fluid">
+     {% endthumbnail %}
+       </a>
+      </div>
+
+
+
+      
+     <div class="card-body">
+       <H7 STYLE="font-family: 'avenir next rounded std'"></H6>
+        <h5 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(36, 163, 60)">{{ product.name }} ></p></a></h4>
+        
+   
+ 
+<h6 class="card-title"><span class="text-muted"> {{ product.preview_text}}</span></a></h6>
+<!--<center>	<span class="price-new">от  {{product.minprice}} руб.</span> </center>-->
+
+        <p class="card-text">
+         
+       
+       </p>
+      </div>
+    
+     </div>
+
+     <br><br>
+ 
+ </div>
+    
+ 
  
 
 
 
 
-  <a href="/">
-   
-		  
-    {% endfor %}
-    
-    <a href="/">
 
-   <!-- <img src="/media/products/banner.png" width="100%"> -->
+ <a href="/">
+  
+     
+   {% endfor %}
    
-  </a>
+   <a href="/">
 
-   </div>
+  <!-- <img src="/media/products/banner.png" width="100%"> -->
+  
+ </a>
+
   </div>
  </div>
 </div>
 </div>
 </div>
+</div>
 
 
 
-  
-
-
-
-
-
+ 
 
 
 
 
 
-              
-          </div>
+
+
+
+
+
+             
+         </div>
 
 {% endblock %}
-
 
