home page banner

--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -12,6 +12,15 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/74864461" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->  
+<!-- Global site tag (gtag.js) - Google Ads: 973596682 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-973596682"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-973596682');
+</script>
 
 {% load static %}
 {% load thumbnail %}
@@ -41,7 +50,7 @@
   <div class="row">
       <div class="col-md-4">
         <a href="/"> <img src="/media/products/logo_rose.png" width="100" height="63"></a>
-        <h7>  {% trans 'комфортная поддержка' %} </h7>
+        <h7>  {% trans 'экспертная полиграфия' %} </h7>
        
       </div>
       <div class="col-md-8">
