--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -25,7 +25,7 @@
 
 <style>
   a:link {
-   color: #00d0d0; /* Цвет ссылок */
+   color: #e99090; /* Цвет ссылок */
   }
   a:visited {
   
@@ -83,11 +83,107 @@
 
 
 
-
+<!--
 {% for ban in banner %}
   <img src="{{ ban.mainimage.url }}" alt="images" width="100%"  height="50%">
-{% endfor %}
+{% endfor %} 
 
+-->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Тег FONT</title>
+ </head>
+ <body>
+ <center> <p><font size="15" color="gray" face="Brush Script MT">Любим свою работу.Останетесь довольны</font> </p></center>
+ </body>
+</html>
+
+
+
+
+<!DOCTYPE HTML>
+<html>
+<head>
+<title></title>
+<style type="text/css">
+img{
+  width="100%
+height: 200px;
+
+  }
+
+</style>
+
+</head>
+
+<body>
+
+<div id="header"  class="div">
+
+ <img src="/media/products/test1.png" id="img_1"  style="position:absolute; "  />
+
+ <img src="/media/products/test2.png"  id="img_2"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+
+ <img src="/media/products/test3.png"  id="img_3"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+
+ <img src="/media/products/test4.png"  id="img_4"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); " />
+
+ <img src="/media/products/test5.png"  id="img_5"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+ 
+ <img src="/media/products/test6.png"  id="img_6"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+
+ <img src="/media/products/test7.png"  id="img_7"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+
+ <img src="/media/products/test8.png"  id="img_8"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+
+ <img src="/media/products/test9.png"  id="img_9"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+
+</div>
+
+<script type="text/javascript">
+
+ var image_count = 9;
+
+ var interval = 5000; //пауза
+
+ var time_out = 15; //скорость смены картинки
+
+ var i = 9;
+
+ var timeout;
+
+ var opacity = 100;
+
+ function change_image() {
+
+ opacity--;
+
+ var j = i + 1;
+
+ var current_image = 'img_' + i;
+
+ if (i == image_count) j = 1;
+var next_image = 'img_' + j;
+document.getElementById(current_image).style.opacity=opacity/100;
+document.getElementById(current_image).style.filter='alpha(opacity='+opacity+')';
+document.getElementById(next_image).style.opacity= (100-opacity)/100;
+document.getElementById(next_image).style.filter=' alpha(opacity='+(100-opacity)+')';
+timeout = setTimeout("change_image()", time_out);
+if (opacity==1) {
+opacity = 100;
+clearTimeout(timeout);
+i++;
+if (i>image_count) i=1;
+timeout = setTimeout("change_image()", interval);
+ }
+ }
+change_image()
+</script>
+</body>
+</html>
 
 
 <!--
@@ -167,10 +263,11 @@
 <html>
 <head>
 <style>
-.center {
-  margin: auto;
+.center {  
+  margin-left: 40%;
+  
   width: 45%;
-  border: 1px solid #73AD21;
+  border: 0 px solid #73AD21;
   padding: 10px;
 }
 </style>
@@ -185,9 +282,9 @@
         <div id="rectangle">
      <a data-role="button" data-inline="true" href="support.html"> 
           <div class="col-sm">
-            <h3 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-phone-volume"></i></h5></span>
+            <h2 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-phone-volume"></i></h2></span>
     
-            <h7 class="card-title"><span class="text-muted">  {% trans 'консультации' %}</h7></span>
+            <h7 class="card-title"><span class="text-muted">  {% trans '100 % поддержка' %}</h7></span>
           </a>
           </div>
         </div>
@@ -197,7 +294,7 @@
         <div id="rectangle">
       <a data-role="button" data-inline="true" href="quality.html"> 
           <div class="col-sm">
-            <h3 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-gem"></i></h5></span>
+            <h2 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-gem"></i></h2></span>
     
             <h7 class="card-title"><span class="text-muted">{% trans 'контроль качества' %} </h7></span> 
           </a> 
@@ -208,7 +305,7 @@
       <div id="rectangle">
        <a data-role="button" data-inline="true" href="hmo.html"> 
           <div class="col-sm">
-          <h3 style="color:rgb(0, 0, 0)" class="card-title"> <i class="fas fa-calculator"></i> </h5></span>
+          <h2 style="color:rgb(0, 0, 0)" class="card-title"> <i class="fas fa-calculator"></i> </h2></span>
      
           <h7 class="card-title"><span class="text-muted">{% trans 'расчёт  в 2 клика' %}  </h7></span>
           </a>
@@ -217,9 +314,9 @@
 
       <a data-role="button" data-inline="true" href="rest.html"> 
         <div class="col-sm">
-          <h3 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-utensils"></i></h5></span>
+          <h2 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-utensils"></i></h2></span>
     
-          <h7 class="card-title"><span class="text-muted"> {% trans ' для ресторанов' %}</h7></span>
+          <h7 class="card-title"><span class="text-muted"> {% trans 'ресторанам' %}</h7></span>
         </a>
         </div>
 <!--
