--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -97,7 +97,8 @@
   <title>Тег FONT</title>
  </head>
  <body>
- <center> <p><font size="15" color="gray" face="Brush Script MT">Любим свою работу.Останетесь довольны</font> </p></center>
+ <!-- <center> <p><font size="15" color="gray" face="Brush Script MT">Экспертная полиграфия</font> </p></center> -->
+ <center> <p><font size="15" color="gray" face="Good Vibes Pro ">Экспертная полиграфия</font> </p></center>
  </body>
 </html>
 
@@ -343,7 +344,7 @@ change_image()
   
 </div>
 
-<br><br>
+<br><br><br><br>
 
 <div class="container">
   
@@ -367,8 +368,9 @@ change_image()
  
  <!-- <div class="tile__body list-default__parent"> -->
 
- <div class="col-md-3 col-lg-3 col-sm-6">
- 
+<!-- <div class="col-md-3 col-lg-3 col-sm-6"> -->
+
+  <div class="col-md-3 col-lg-4 col-sm-6">
 
      <div class="card">
       <div class="card-img">
@@ -384,7 +386,7 @@ change_image()
 
       
      <div class="card-body">
-       <H7 STYLE="font-family: 'avenir next rounded std'"></H6>
+       <H7 STYLE="font-family: 'avenir next rounded std'"></H7>
         <h5 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(36, 163, 60)">{{ product.name }} ></p></a></h4>
         
    
