--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -50,7 +50,7 @@
   <div class="row">
       <div class="col-md-4">
         <a href="/"> <img src="/media/products/logo_rose.png" width="100" height="63"></a>
-        <h7>  {% trans 'экспертная полиграфия' %} </h7>
+        <h7>  {% trans 'мы любим свою работу' %} </h7>
        
       </div>
       <div class="col-md-8">
