--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -20,6 +20,108 @@
    <br>
 
 
+
+
+   <!DOCTYPE html> 
+<html> 
+<body> 
+
+<div style="text-align:center"> 
+  <button onclick="playPause()">Play/Pause</button> 
+  <button onclick="makeBig()">Big</button>
+  <button onclick="makeSmall()">Small</button>
+  <button onclick="makeNormal()">Normal</button>
+  <br><br>
+  <video id="video1" width="420">
+	<source src="/media/video/box_production1.mp4" type="video/mp4">
+  
+    Your browser does not support HTML video.
+  </video>
+</div> 
+
+<script> 
+var myVideo = document.getElementById("video1"); 
+
+function playPause() { 
+  if (myVideo.paused) 
+    myVideo.play(); 
+  else 
+    myVideo.pause(); 
+} 
+
+function makeBig() { 
+
+	
+    myVideo.width = 860; 
+} 
+
+function makeSmall() { 
+    myVideo.width = 320; 
+} 
+
+function makeNormal() { 
+    myVideo.width = 420; 
+} 
+</script> 
+
+
+
+</body> 
+</html>
+
+
+
+<br>
+
+
+<!--
+
+   <div class="fullscreen-bg">
+    <div class="overlay">
+       
+    </div>
+    <video loop="" muted="" autoplay="" poster="/video/box_production1.mp4" class="fullscreen-bg__video">
+        <source src="/video/box_production1.mp4.mp4" type="video/mp4">
+       
+    </video>
+</div>
+<script>
+
+.fullscreen-bg {
+    overflow: hidden;
+    z-index: -100;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    padding-top:45%;
+}
+ 
+.fullscreen-bg__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.overlay {
+    background: rgba(0,0,0,0.6);
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+}
+.overlay h1 {
+    text-align:center;
+    color:#fff;
+    font-size: 70px;
+    margin-top:17%;
+}
+
+
+</script>
+
+-->
    <div class="container">
 	<div class="row">
   
