--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -29,6 +29,15 @@
 </head>
 
     {% if request.user.is_authenticated %}
+
+<br>
+
+
+
+
+      
+
+        <br>
     
   <center>
        <span id="link"><a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-success text-uppercase"> <i class="fas fa-shopping-cart"></i> {% trans 'заказать' %}  </a></span> 
@@ -38,6 +47,8 @@
         
         <p style="color:rgb(229, 152, 147)"><a href="/register.html"> <p style="color:rgb(229, 152, 147)"> {% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6> 
          {% endif %}
+
+
     
     
       </body> 
@@ -120,10 +131,18 @@ document.getElementById("demo").innerHTML = a;
             
             <input type="hidden" id="custId" name="product_id" value="{{ product.id }}">
             
-           
-            
-           
         </div> 
+
+        <center>
+            <input type="submit" class="btn btn-outline-danger btn-buy" value="{% trans 'Рассчитать' %}" />
+        
+            <center>
+
+                <br>
+
+        <tr> 
+            <center>   <td><h3><p style="color:rgb(235, 95, 14)">{{product.calc}} руб. за {{product.tirazh}} шт.</p></h3></td>  </center> 
+         </tr>
 
                 
 <p><a href="javascript:flipflop('animals');">{% trans 'у вас исчезает введенное значение тиража?' %}</a></p> 
@@ -131,7 +150,7 @@ document.getElementById("demo").innerHTML = a;
 <ul id="animals" style="display: none;">
   <li><div id="browse_app">
 
-    {% trans ' значение тиража не слетает, результат выводится в таблице ниже  зеленым цветом, а поле ввода обнуляется для следующего расчёта' %}
+    {% trans ' значение тиража не слетает, результат выводится в таблице ниже , а поле ввода обнуляется для следующего расчёта' %}
    
 
 </li>
@@ -150,10 +169,7 @@ document.getElementById("demo").innerHTML = a;
    <head>
 
    
-    <center>
-    <input type="submit" class= "btn btn-secondary btn-buy" value="{% trans 'Рассчитать' %}" />
-
-    <center>
+   
   
     <div class="container-fluid">
         <table class="table table-striped table-sm" id="my_products">  
@@ -187,10 +203,10 @@ document.getElementById("demo").innerHTML = a;
     
             <tr>
 
-                <td><p  style="color:rgb(36, 163, 60)">{{product.box_size}}</p></td>
+                <td><p  style="color:rgb(229, 152, 147)">{{product.box_size}}</p></td>
                 <td><p  style="color:rgb(36, 163, 60)">{{product.timeplus}}</p></td>
                 <td><p style="color:rgb(36, 163, 60)">{{product.tirazh}}</p></td>
-                <td><p style="color:rgb(36, 163, 60)">{{product.calc}}</p></td>
+                <td><p style="color:rgb(229, 152, 147)">{{product.calc}}</p></td>
             
 
             </tr>
